--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -1,3 +1,4 @@
+<!-- base.html -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -7,17 +8,16 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 </head>
 <body>
-
     <nav class="navbar">
         <ul>
             <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'about' %}">About</a></li>
-            <li><a href="{% url 'expenses' %}">Expenses</a></li>
-        </ul>
-    </nav>
-
-    {% block content %}
-    {% endblock content %}
-
+            <li><a href="{% url 'add_expense' %}">Add Expense</a></li>
+            <li><a href="{% url 'view_expenses' %}">View Expenses</a></li>
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+            {% else %}
+                <li><a href="{% url 'login' %}">Login</a></li>
+            {% endif %}
+    {% block content %}{% endblock %}
 </body>
 </html>
