--- a/tracker/templates/login.html
+++ b/tracker/templates/login.html
@@ -9,7 +9,7 @@
         <form method="post">
             {% csrf_token %}
             <div class="input-group">
-                <label for="username">Username or Email:</label>
+                <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="input-group">
