--- a/tracker/templates/registration.html
+++ b/tracker/templates/registration.html
@@ -18,11 +18,11 @@
             </div>
             <div class="input-group">
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password1" name="password" required>
             </div>
             <div class="input-group">
                 <label for="confirm_password">Confirm Password:</label>
-                <input type="password" id="confirm_password" name="confirm_password" required>
+                <input type="password" id="confirm_password" name="password2" required>
             </div>
             <button type="submit">Register</button>
         </form>
