--- a/tracker/templates/index.html
+++ b/tracker/templates/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="input-group">
                 <label for="datetime">Date and Time</label>
-                <input type="datetime-local" name="datetime" id="datetime" required>
+                <input type="datetime-local" name="datetime" id="datetime">
             </div>
             <button type="submit">Add Expense</button>
         </form>
